@@ -1,3 +1,8 @@
+Wed Feb  4 00:05:11 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-manager.c (load_meta_themes): exit if it is a
+	non-compliant wm (eg, anything but metacity)
+
 Tue Feb  3 23:36:25 2004  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-theme-manager.c (load_meta_themes): use
